--- a/Objects/Projeto2.build_log.htm
+++ b/Objects/Projeto2.build_log.htm
@@ -21,31 +21,24 @@ Target DLL:      PEMicro\Pemicro_ArmCortexInterface.dll V1.3.0.0
 Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
-C:\Users\vitor\Área de Trabalho\Armetro\Projeto2.uvprojx
-Project File Date:  08/26/2023
+C:\Users\vitor\Documentos\vaii\Armetro\Projeto2.uvprojx
+Project File Date:  08/31/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
-compiling subRotinaAdm.c...
-compiling validacao_senhas.c...
-compiling timers.c...
-controle_motor.c(59): warning: non-void function does not return a value [-Wreturn-type]
-}
-^
-controle_motor.c(63): warning: non-void function does not return a value [-Wreturn-type]
-}
-^
-2 warnings generated.
 compiling controle_motor.c...
+compiling subRotinaAdm.c...
+compiling timers.c...
+compiling validacao_senhas.c...
 compiling system_MKL25Z4.c...
-compiling main.c...
-compiling lcdio.c...
-compiling teclado.c...
 assembling startup_MKL25Z4.s...
+compiling lcdio.c...
+compiling main.c...
+compiling teclado.c...
 linking...
-Program Size: Code=2784 RO-data=336 RW-data=16 ZI-data=352  
-".\Objects\Projeto2.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=4392 RO-data=400 RW-data=0 ZI-data=408  
+".\Objects\Projeto2.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -72,9 +65,9 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.5.0
-      Source file:   Device/Source/system_MKL25Z4.c
       Include file:  Device/Source/system_MKL25Z4.h
       Source file:   Device/Source/ARM/startup_MKL25Z4.s
+      Source file:   Device/Source/system_MKL25Z4.c
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
