--- a/Objects/Projeto2.build_log.htm
+++ b/Objects/Projeto2.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: gabriel Gabriel.sadigursky@gmail.com, UFRGS, LIC=----
+License Information: vitor simon de souza, ufrgs, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.38.0.0
@@ -21,23 +21,23 @@ Target DLL:      PEMicro\Pemicro_ArmCortexInterface.dll V1.3.0.0
 Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
-C:\Users\Gabri\Desktop\Armetro\Projeto2.uvprojx
-Project File Date:  09/03/2023
+C:\Users\vitor\Documentos\vaii\Armetro\Projeto2.uvprojx
+Project File Date:  09/04/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
-compiling main.c...
 compiling subRotinaAdm.c...
-compiling timers.c...
-compiling lcdio.c...
 compiling controle_motor.c...
 compiling teclado.c...
-compiling validacao_senhas.c...
-compiling system_MKL25Z4.c...
 assembling startup_MKL25Z4.s...
+compiling system_MKL25Z4.c...
+compiling timers.c...
+compiling lcdio.c...
+compiling main.c...
+compiling validacao_senhas.c...
 linking...
-Program Size: Code=13100 RO-data=1136 RW-data=176 ZI-data=416  
+Program Size: Code=13116 RO-data=1136 RW-data=176 ZI-data=424  
 ".\Objects\Projeto2.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -57,8 +57,8 @@ Package Vendor: Keil
 <h2>Collection of Component include folders:</h2>
   ./RTE/Device/MKL25Z128xxx4
   ./RTE/_Target_1
-  C:/Users/Gabri/Desktop/KEIL/ARM/CMSIS/5.9.0/CMSIS/Core/Include
-  C:/Users/Gabri/Desktop/KEIL/Keil/Kinetis_KLxx_DFP/1.15.0/Device/Include
+  C:/Users/vitor/AppData/Local/Arm/Packs/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+  C:/Users/vitor/AppData/Local/Arm/Packs/Keil/Kinetis_KLxx_DFP/1.15.0/Device/Include
 
 <h2>Collection of Component Files used:</h2>
 
@@ -66,8 +66,8 @@ Package Vendor: Keil
 
    * Component: Keil::Device:Startup:2.5.0
       Source file:   Device/Source/ARM/startup_MKL25Z4.s
-      Include file:  Device/Source/system_MKL25Z4.h
       Source file:   Device/Source/system_MKL25Z4.c
+      Include file:  Device/Source/system_MKL25Z4.h
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
