--- a/Objects/Projeto2.build_log.htm
+++ b/Objects/Projeto2.build_log.htm
@@ -27,17 +27,18 @@ Project File Date:  09/04/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
-compiling subRotinaAdm.c...
 compiling controle_motor.c...
-compiling teclado.c...
+compiling main.c...
+compiling subRotinaAdm.c...
 assembling startup_MKL25Z4.s...
-compiling system_MKL25Z4.c...
+compiling teclado.c...
 compiling timers.c...
 compiling lcdio.c...
-compiling main.c...
-compiling validacao_senhas.c...
+compiling system_MKL25Z4.c...
+compiling rotinas_viagem.c...
+compiling menus.c...
 linking...
-Program Size: Code=13116 RO-data=1136 RW-data=176 ZI-data=424  
+Program Size: Code=12964 RO-data=1136 RW-data=176 ZI-data=400  
 ".\Objects\Projeto2.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -66,8 +67,8 @@ Package Vendor: Keil
 
    * Component: Keil::Device:Startup:2.5.0
       Source file:   Device/Source/ARM/startup_MKL25Z4.s
-      Source file:   Device/Source/system_MKL25Z4.c
       Include file:  Device/Source/system_MKL25Z4.h
+      Source file:   Device/Source/system_MKL25Z4.c
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
